converting jupyter in python code to connect with mongoDB

--- a/Code/mission_to_mars.ipynb
+++ b/Code/mission_to_mars.ipynb
@@ -93,8 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_title = []\n",
-    "\n",
+    "#iterate with find_result and retrieve values. It will take the first result and stop with break \n",
     "for result in find_result:\n",
     "    news_title = result.find('div',class_= 'content_title')\n",
     "    news_title = news_title.find('a').text\n",
@@ -127,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find image from Mars"
+    "## Find recent images from Mars"
    ]
   },
   {
@@ -508,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,27 +527,30 @@
     "    {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": schiaparelli},\n",
     "    {\"title\": \"Cerberus Hemisphere\", \"img_url\": syrtis},\n",
     "    {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": valles},\n",
-    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": cerberus},\n",
+    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": cerberus}\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Valles Marineris Hemisphere'"
+       "{'title': 'Syrtis Major Hemisphere',\n",
+       " 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hemisphere_image_urls[3]"
+   ]
   },
   {
    "cell_type": "code",
